<?xml version="1.0" encoding="utf-8"?>
<resources>

<!-- for several activities -->    
    <string name="cancel">Cancel</string>
    <string name="go_back">Return</string>
    <string name="apply">Apply</string>
    
<!-- HomeScreenActivity -->
    <string name="welcome">Welcome to PayMeBack :) !</string>
    <string name="app_name">PayMeBack</string>
    <string name="add_group">Add a group</string>
    <string name="load_group">Load a group</string> 
    
<!-- AddGroupActivity -->
    <string name="group_name">Group Name</string>
    <string name="members">Members:</string>
    <string name="create">Create</string>
    <string name ="addNewGroup">Add a new group:</string>
    
<!-- GroupActivity -->    
    <string name="add_expense">Add Expense</string>
    <string name="balance">Balance</string>
    <string name="expenses">Expenses:</string>
    
<!-- NewExpenseActivity -->
    <string name="paid_by">Paid by:</string>
    <string name="expense_name">Name of the expense</string>
    <string name="amount">Amount</string>
    <string name="add_friend">Add a Friend</string>        
    <string name="paid_by_user_prompt">Who paid for this?</string>        
    <string name="date">Date: </string>
    <string name="pick_date">Set date</string>
    <string name="participants">Participants:</string>
    <string name="addNewExpense">Add a new expense:</string>
    
<!-- BalanceActivity -->   
    <string name="global_balance">Global Balance:</string>
    <string name="expenditures_balance">Expenditures Balance:</string>
    <string name="transactions">Transactions</string>
    
    
<!-- TransactionsActivity -->
    <string name="transactionsSlogan">How could you get your money back?</string>
    
</resources>