<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	<Button
        android:id="@+id/addExpense"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_expense" 
        />
	
	<Button 
        android:id="@+id/balance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/balance" 
	    />
	
	<Button 
	    android:id="@+id/goBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back" 
	    />
    
</LinearLayout>