<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/global_balance"
	    />
	<TextView
	    android:id="@+id/globalBalance"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/expenditures_balance"
	    />
	<TextView
	    android:id="@+id/expendituresBalance"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />
	<Button
	    android:id="@+id/transactions"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/transactions"
	    />	
	
</LinearLayout>
